fix overlay issue on mobile navbar detailed in readme and changed styling of footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,10 +37,6 @@
     padding-left: 12px !important;
 }
 
-#mobile-demo li a{
-    z-index: 99;
-}
-
 /* ------------------------------------------------------------------------------Home.html*/
 
 .panel-row {
@@ -123,8 +119,5 @@ main {
         text-align: center;
         margin-top: 2px;
         }
-    
-    .copyright {
-        font-size: x-small;
-    }
+
 }
